# docs/swagger.json
@@ -7,14 +7,14 @@
     "paths": {
         "/hello": {
             "get": {
-                "description": "接口详细描述信息",
+                "description": "Hello接口",
                 "tags": [
                     "用户信息"
                 ],
-                "summary": "接口概要说明",
+                "summary": "Hello接口",
                 "responses": {
                     "200": {
-                        "description": "{\"message\":\"success\"}\"  //成功返回的数据结构， 最后是示例",
+                        "description": "{\"message\":\"success\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -55,6 +55,23 @@
                 "responses": {
                     "200": {
                         "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "description": "查询用户列表接口",
+                "tags": [
+                    "用户信息"
+                ],
+                "summary": "查询用户列表接口",
+                "responses": {
+                    "200": {
+                        "description": "{\"message\":\"success\"}",
                         "schema": {
                             "type": "string"
                         }
